# mandrill

./: .gitignore  default.nix  mandrill.cabal  overlay.nix  prelude.nix  release.nix  shell.nix
nix/: sources.json
src/: .dir-locals.el
src/Network/API/: Mandrill.hs
src/Network/API/Mandrill/: HTTP.hs  Inbound.hs  Messages.hs  Senders.hs  Settings.hs  Templates.hs  Trans.hs  Types.hs  Webhooks.hs
src/Network/API/Mandrill/Messages/: Types.hs
src/Network/API/Mandrill/Templates/: Types.hs
src/Network/API/Mandrill/Users/: Types.hs
test/: .dir-locals.el
