name:                mandrill
version:             0.5.4.0
synopsis:            Library for interfacing with the Mandrill JSON API
description:         Pure Haskell client for the Mandrill JSON API
license:             MIT
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
category:            Network
build-type:          Simple
tested-with:         GHC == 7.4, GHC == 7.6, GHC == 7.8, GHC == 7.10.2
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/adinapoli/mandrill

library
  exposed-modules:
    Network.API.Mandrill
    Network.API.Mandrill.Settings
    Network.API.Mandrill.Types
    Network.API.Mandrill.Trans
    Network.API.Mandrill.Users
    Network.API.Mandrill.Users.Types
    Network.API.Mandrill.Messages
    Network.API.Mandrill.Messages.Types
    Network.API.Mandrill.Templates
    Network.API.Mandrill.Templates.Types
    Network.API.Mandrill.Inbound
    Network.API.Mandrill.Webhooks
    Network.API.Mandrill.Senders
  other-modules:
    Network.API.Mandrill.Utils
    Network.API.Mandrill.HTTP
  -- other-extensions:
  build-depends:
      base 
    , containers 
    , bytestring 
    , base64-bytestring 
    , text 
    , http-types 
    , http-client 
    , http-client-tls 
    , aeson 
    , microlens-th 
    , blaze-html 
    , QuickCheck 
    , mtl 
    , time
    , email-validate 
    , old-locale
    , unordered-containers
  hs-source-dirs:
    src
  default-language:
    Haskell2010

  ghc-options:
    -funbox-strict-fields -Wall

test-suite mandrill-tests
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  other-modules:
    Tests
    RawData
    Online
  hs-source-dirs:
    test
  default-language:
    Haskell2010
  build-depends:
      mandrill -any
    , base
    , aeson
    , bytestring
    , QuickCheck
    , tasty 
    , tasty-quickcheck
    , tasty-hunit
    , raw-strings-qq 
    , text
